# crewAI_example

./: .env.sample  .gitignore  README.md  pyproject.toml
hotel_recommendation_chatbot/: .env.sample  README.md  pyproject.toml
hotel_recommendation_chatbot/src/hotel_recommendation_chatbot/: crew.py  main.py  settings.py
hotel_recommendation_chatbot/src/hotel_recommendation_chatbot/config/: agents.yaml  tasks.yaml
hotel_recommendation_chatbot/src/hotel_recommendation_chatbot/tools/: __init__.py  hotel_parameters.py  hotel_search.py  nearby_search.py
knowledge/: user_preference.txt
src/: run.py
src/hotel_recommendation_chatbot/: api.py  main.py  settings.py
src/hotel_recommendation_chatbot/config/: agents.yaml  tasks.yaml
src/hotel_recommendation_chatbot/tools/: hotel_api.py  hotel_parameters.py  hotel_search.py  nearby_search.py
templates/: index.html
