[project]
name = "hotel_recommendation_chatbot"
version = "0.1.0"
description = "hotel_recommendation_chatbot using crewAI"
authors = [{ name = "Samir Liu", email = "gup24000@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "langtrace-python-sdk>=3.8.6",
]

[project.scripts]
hotel_recommendation_chatbot = "hotel_recommendation_chatbot.main:run"
run_crew = "hotel_recommendation_chatbot.main:run"
train = "hotel_recommendation_chatbot.main:train"
replay = "hotel_recommendation_chatbot.main:replay"
test = "hotel_recommendation_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
